--- a/src/app/protected/edu/lessons/tests/tests.component.html
+++ b/src/app/protected/edu/lessons/tests/tests.component.html
@@ -1,6 +1,19 @@
 <cranix-toolbar title="{{ 'Todos' | translate}}"></cranix-toolbar>
+<ion-toolbar *ngIf="!selectedChallenge" class="page-toolbar">
+  {{'Reload tests to work on' | translate}}
+  <ion-buttons slot="end">
+    <ion-button size="small" fill="solid" (click)="objectService.getAllObject('challenges/todo')">
+      <ion-icon slot="icon-only" name="refresh" color="success"></ion-icon>
+    </ion-button>
+  </ion-buttons>
+</ion-toolbar>
 <ion-content *ngIf="!selectedChallenge">
-  <cranix-md-list objectType="challenges/todo" [context]="context"></cranix-md-list>
+  <ion-item *ngFor="let object of objectService.allObjects['challenges/todo']; let i = index"
+    style="background-color : {{authService.rowColors[i%2]}}">
+    <ion-label (click)="redirectToEdit(object)">
+      {{object.description}}
+    </ion-label>
+  </ion-item>
 </ion-content>
 <ion-toolbar *ngIf="selectedChallenge" class="page-toolbar">
   <ion-title>
@@ -19,13 +32,16 @@
         </ion-content>
       </ng-template>
     </ion-popover>
-    <ion-button *ngIf="!autoSave" size="small" fill="solid" (click)="autoSave = !autoSave" matTooltip="{{'Turn on auto save. All changes will be saved inmediately.' | translate }}">
+    <ion-button *ngIf="!autoSave" size="small" fill="solid" (click)="autoSave = !autoSave"
+      matTooltip="{{'Turn on auto save. All changes will be saved inmediately.' | translate }}">
       <ion-icon slot="icon-only" name="play" color="success"></ion-icon>
     </ion-button>
-    <ion-button *ngIf="autoSave" size="small" fill="solid" (click)="autoSave = !autoSave" matTooltip="{{'Turn off auto save. Changes will be saved only by push the checkmark.' | translate }}">
+    <ion-button *ngIf="autoSave" size="small" fill="solid" (click)="autoSave = !autoSave"
+      matTooltip="{{'Turn off auto save. Changes will be saved only by push the checkmark.' | translate }}">
       <ion-icon slot="icon-only" name="stop" color="danger"></ion-icon>
     </ion-button>
-    <ion-button size="small" fill="solid" (click)="save(false)" matTooltip="{{'Save challenge' | translate }}" [disabled]="!challengesService.modified">
+    <ion-button size="small" fill="solid" (click)="save(false)" matTooltip="{{'Save challenge' | translate }}"
+      [disabled]="!challengesService.modified">
       <ion-icon slot="icon-only" name="checkmark" color="success"></ion-icon>
     </ion-button>
   </ion-buttons>
