--- a/src/app/shared/cranix-md-list/cranix-md-list.component.html
+++ b/src/app/shared/cranix-md-list/cranix-md-list.component.html
@@ -1,13 +1,12 @@
 <ion-toolbar *ngIf="!authService.isMD()" class="page-toolbar">
   <ion-item lines="none">
-    <ionic-selectable *ngIf="objectType == 'challenge'" [(ngModel)]="authService.selectedTeachingSubject"
-      [items]="crxObjectService.subjects" itemValueField="id" itemTextField="name" [canSearch]="true" (onChange)="subjectChanged($event)">
-      <ng-template ionicSelectableCloseButtonTemplate>
-        <ion-icon name="close" color="danger"></ion-icon>
-      </ng-template>
-    </ionic-selectable>
     <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="filterMD" style="min-width: 400px;">
     </ion-input>
+    <ionic-selectable *ngIf="objectType == 'challenge'" [(ngModel)]="authService.selectedTeachingSubject"
+      [items]="crxObjectService.subjects" itemValueField="id" itemTextField="name" [canSearch]="true" (onChange)="subjectChanged($event)">
+      <ng-template ionicSelectablePlaceholderTemplate>{{'teachingSubject'|translate}}</ng-template>
+      <ng-template ionicSelectableCloseButtonTemplate><ion-icon name="close" color="danger"></ion-icon></ng-template>
+    </ionic-selectable>
   </ion-item>
   <ion-buttons slot="end">
     <ion-button size="small" fill="solid" (click)="context.componentParent.redirectToEdit(null)"
@@ -23,9 +22,8 @@
 <ion-item *ngIf="authService.isMD()">
   <ionic-selectable *ngIf="objectType == 'challenge'" [(ngModel)]="authService.selectedTeachingSubject"
     [items]="crxObjectService.subjects" itemValueField="id" itemTextField="name" [canSearch]="true">
-    <ng-template ionicSelectableCloseButtonTemplate>
-      <ion-icon name="close" color="danger"></ion-icon>
-    </ng-template>
+    <ng-template ionicSelectablePlaceholderTemplate>{{'teachingSubject'|translate}}</ng-template>
+    <ng-template ionicSelectableCloseButtonTemplate><ion-icon name="close" color="danger"></ion-icon></ng-template>
   </ionic-selectable>
   <ion-button size="small" fill="clear" (click)="back()" [disabled]="min <= 0">
     <ion-icon slot="icon-only" name="arrow-back"></ion-icon>
