--- a/src/app/shared/cranix-md-list/cranix-md-list.component.html
+++ b/src/app/shared/cranix-md-list/cranix-md-list.component.html
@@ -2,9 +2,10 @@
   <ion-item lines="none">
     <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="filterMD" style="min-width: 400px;">
     </ion-input>
+    <ion-label  *ngIf="objectType == 'challenge'">{{'teachingSubject'|translate}}:</ion-label>
     <ionic-selectable *ngIf="objectType == 'challenge'" [(ngModel)]="authService.selectedTeachingSubject"
       [items]="crxObjectService.subjects" itemValueField="id" itemTextField="name" [canSearch]="true" (onChange)="subjectChanged($event)">
-      <ng-template ionicSelectablePlaceholderTemplate>{{'teachingSubject'|translate}}</ng-template>
+      <ng-template ionicSelectablePlaceholderTemplate>{{'apparently'|translate}}</ng-template>
       <ng-template ionicSelectableCloseButtonTemplate><ion-icon name="close" color="danger"></ion-icon></ng-template>
     </ionic-selectable>
   </ion-item>
